--- a/client/src/component/FAQ/faq.scss
+++ b/client/src/component/FAQ/faq.scss
@@ -10,6 +10,7 @@
       margin-right: 10%;
       text-transform: uppercase;
       font-weight: 900;
+      overflow: hidden;
     }
 
     #faq-layout {
